# videohub

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile  README.md  Rocket.toml  docker-compose.yaml  serve.sh
cli/: Cargo.toml
cli/src/: cli.rs  defs.rs  display.rs  main.rs
cli/templates/: device_info.j2
proto/: Cargo.toml
proto/src/: hub.rs
proto/src/protocol/: de.rs  ser.rs
reqwest/: Cargo.toml
reqwest/src/: main.rs
rest/: Cargo.toml  Rocket.toml
rest/src/: main.rs
src/: hub.rs  lib.rs
src/protocol/: de.rs  error.rs  mod.rs  ser.rs
web/: Cargo.toml  index.html
web-client/: Cargo.toml  index.scss
web-client/src/: app.rs  main.rs  route.rs
web-server/: Cargo.toml  Rocket.toml
web-server/api-def/: Cargo.toml
web-server/api-def/src/: api_doc_examples.rs  defs.rs  lib.rs
web-server/frontend/: Cargo.toml  index.html  index.scss
web-server/frontend/src/: app.rs  config.rs  fetch.rs  main.rs  route.rs
web-server/src/: api.rs  config.rs  defs.rs  lib.rs  main.rs
web/src/: app.rs  route.rs
