[package]
name = "videohub-proto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1", optional = true }
futures = { version = "0.3", optional = true }
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
thiserror = "1"

[features]
default = ["protocol"]
protocol = []
hub = ["dep:async-std", "dep:futures"]
