[package]
name = "videohub-server"
version = "0.1.0"
edition = "2021"

[dependencies]
videohub-proto = { path = "../proto", features = ["hub"] }
rocket = { version = "0.5.0-rc.2", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
itertools = "0.10"
web-sys = { version = "0.3.58", features = [
  "CssStyleDeclaration",
  "HtmlElement",
  "HtmlButtonElement",
  "console",
] }
anyhow = "1"

[features]
default = ["defs"]
defs = []
api = []
