[package]
name = "videohub-web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
videohub = { path = "../" }
yew = "0.19"
web-sys = { version = "0.3.58", features = [
  "CssStyleDeclaration",
  "HtmlElement",
  "HtmlButtonElement",
  "console",
] }
wasm-bindgen = "0.2"
getrandom = { version = "0.2", features = ["js"] }
log = "0.4"
simple_logger = "2.2"
