[package]
name = "videohub-web-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
web-sys = { version = "0.3.58", features = [
  "CssStyleDeclaration",
  "HtmlElement",
  "HtmlButtonElement",
  "console",
  "Request",
] }
yew = { version = "0.19" }
videohub = { path = "../../" }
wasm-bindgen = "0.2"
getrandom = { version = "0.2", features = ["js"] }
gloo = "0.8"
simple_logger = "2.2"
reqwest = { version = "0.11", features = ["json"] }
